# cdm

./: .cruft.json  .gitignore  404.html  AGENTS.md  LICENSE  Makefile  README.md  config.public.mk  config.yaml  index.html  mkdocs.yml  project.Makefile  prune-schema.py  pyproject.toml  sitemap.xml
.github/instructions/: *.instructions.md  linkml.instructions.md
.github/workflows/: deploy-docs.yaml  deploy.yaml  tag.yaml
about/: index.html
classes/Activity/: index.html
classes/Any/: index.html
classes/Artifact/: index.html
classes/Entity/: index.html
classes/Event/: index.html
classes/HasLifecycle/: index.html
classes/Meta/: index.html
classes/Resource/: index.html
classes/SolutionItem/: index.html
classes/WithGRID/: index.html
classes/WithLifecycle/: index.html
classes/WithMaturity/: index.html
classes/WithPlatformAPI/: index.html
classes/WithVault/: index.html
classes/WithVaultLink/: index.html
classes/col_Comment/: index.html
classes/col_CommentThread/: index.html
classes/col_Task/: index.html
classes/col_comment/: index.html
classes/col_comment_thread/: index.html
classes/col_task/: index.html
classes/con_env_configuration/: index.html
classes/con_schematic_template/: index.html
classes/con_schematic_template_revision/: index.html
classes/cus_Script/: index.html
classes/cus_ScriptExecution/: index.html
classes/cus_ScriptExecutionCompleted/: index.html
classes/cus_Workflow/: index.html
css/: custom.css
search/: search_index.json
tags/: index.html
tests/: __init__.py  sim.py  test_data.py  test_flows.py
(+680 files in other folders)
